--- a/config.toml
+++ b/config.toml
@@ -62,8 +62,8 @@ enableGitInfo = false
   avatar = "portrait.jpg"  # Specify an avatar image (in `static/img/` folder) or delete value to disable avatar.
 
   # Details for the Contact Widget
-  email = "esepulveda@pm.me"
-  address = "Engineering North, Room N124, The University of Adelaide, Adelaide, 5000, Australia"
+  email = "esepulveda@protonmail.com"
+  address = "Engineering North, Room N138, The University of Adelaide, Adelaide, 5000, Australia"
   office_hours = "Monday 9:00 to 13:00 or email for appointment"
   phone = "888 888 88 88"
   skype = "exequiel_sepulveda1"
